# riggingtools

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  code_of_conduct.md
common/: BridgingHeader_Apple.h  Compression.cpp  Compression.hpp  Rig.hpp  Utility.cpp  Utility.hpp  Utility_Apple.mm  config.h  config.h.in
doc/: build.md  generated-rigs.md  howto.md  kp2rig.md  kp2rigInputFiles.md  rig2blender.md  rig2c.md
img/: workflow.drawio
kp2rig/: CMakeLists.txt  kpDescriptor.json
kp2rig/src/: AnimatedRig.cpp  AnimatedRig.hpp  Animation.cpp  Animation.hpp  KpCsvImporter.cpp  KpCsvImporter.hpp  KpCsvStreamImporter.cpp  KpCsvStreamImporter.hpp  KpHelper.cpp  KpHelper.hpp  KpImporter.hpp  KpImporterFactory.cpp  KpImporterFactory.hpp  KpJsonImporter.cpp  KpJsonImporter.hpp  KpMop_14.cpp  KpMop_14.hpp  KpMop_19.cpp  KpMop_19.hpp  KpMpii_16.cpp  KpMpii_16.hpp  KpMpii_20.cpp  KpMpii_20.hpp  KpMpii_27.cpp  KpMpii_27.hpp  KpSolidObject.cpp  KpSolidObject.hpp  KpToRigHelper.cpp  KpToRigHelper.hpp  KpType.hpp  Pose.hpp  PoseFactory.cpp  PoseFactory.hpp  RigPose.cpp  RigPose.hpp  RigToKpHelper.cpp  RigToKpHelper.hpp  Smooth.hpp  SmoothFactory.cpp  SmoothFactory.hpp  (+3 more)
rig2blender/: blenderRig.py  genPyLib.bat  python3.def  rig2blender.bat  rig2blender.py  rig2blender.sh
rig2c/: CMakeLists.txt
rig2c/include/: rig2c.h  rig2cConfig.h  rig2cDelegates.h  rig2cTypes.h
rig2c/src/: rig2c.cpp
rig2c/test/: CMakeLists.txt
rig2c/test/src/: Callbacks.cpp  Callbacks.hpp  StressTest.cpp  main.cpp
rig2cs/: CMakeLists.txt  librig2cInterop.cs  rig2c.cs
rig2cs/test/: CMakeLists.txt  rig2csTest.cs
rig2py/: CMakeLists.txt
rig2py/py/: plot.py  rig2pyHelper.py
rig2py/src/: CInterface.c  CInterface.h  Joint.c  Joint.h  implementation.cpp
rig2py/test/: rig2pyTest.bat  rig2pyTest.py  rig2pyTest.sh
rig2swift/: CMakeLists.txt  rig2swift-Bridging-Header.h  rig2swift.swift
rig2swift/testIos/: AppDelegate.swift  CMakeLists.txt  Info.plist  SceneDelegate.swift  ViewController.swift
samples/worldCoordinates/: README.md  worldCoordinates.py
testData/: outdatedVersion.json
unityPackage/: SkeletonLoader_README.md  package.json
unityPackage/Runtime/: com.riggingtools.skeletons.runtime.asmdef
unityPackage/Runtime/Editor/: SpawnSkeletonTrack.cs  SpawnSkeletons.cs  SpawnVCams.cs
unityPackage/Runtime/Materials/: Brown_MAT.mat
unityPackage/Runtime/Models/: PolygonPlayer_12.fbx
unityPackage/Runtime/Prefabs/: CinemachineVCamCreation.prefab  Default_PolygonPlayer.prefab  Default_PolygonPlayerEditor.prefab  Football_Placeholder.prefab  SkeletonLoader.prefab
unityPackage/Runtime/Prefabs/ExperimentalPrefabs/: SkeletonLoaderEditor.prefab  SkeletonTimeline.prefab
unityPackage/Runtime/Prefabs/vCamPrefabs/: vCam_Drone.prefab  vCam_FirstPerson.prefab  vCam_FrontThirdPerson.prefab  vCam_ThirdPerson.prefab
unityPackage/Runtime/Scenes/: EXPERIMENTAL_SkeletonPlayerEditor.unity  Sample_SkeletonPlayer.unity
unityPackage/Runtime/Scripts/BRRigGraphTrack/: BRRigMoveAsset.cs  BRRigMoveBehaviour.cs  BRRigMoveManager.cs  BRRigMoveTrack.cs
unityPackage/Runtime/Scripts/CinemachineCameras/: AssignVCamToPlayer.cs
unityPackage/Runtime/Scripts/Custom Editor/: AssignVCamToPlayerEditor.cs  PluginLoaderEditor.cs
unityPackage/Runtime/Scripts/Rig_Bridge/: CMakeLists.txt
unityPackage/Runtime/Scripts/Rig_Bridge/test/: CMakeLists.txt
unityPackage/Runtime/Scripts/Skeleton_Movement/: BaseJointHierarchy.cs  FootballJointHierarchy.cs  FrameTimeSource.cs  HumanoidJointHierarchy.cs  IJointHierarchy.cs  ISkeleton.cs  PlayerIDDisplay.cs  PluginLoader.cs  SkeletonV2.cs
unityPackage/Runtime/Timelines/: MasterTimeline.playable  PluginTimeline.playable
